# rom

./: .gitignore  Cargo.toml  README.md  run.bat  run_decrypt.spec  test_decrypt_silent.spec
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  models.rs  protocol.rs
controller/: Cargo.toml
controller/src/: main.rs
controller/src/input/: mod.rs
controller/src/ui/: mod.rs
docs/: architecture.md  protocol.md  roadmap.md
office/: README.md  package-lock.json  package.json  server.js
office/public/: index.html  office.html  share.html  share.js  styles.css  viewer.js
office/receiver-agent/: HrasReceiverAgent.csproj  Program.cs  README.md  Windows Security.csproj  hras-agent.json  install-desktop-controls.ps1  install-startup.ps1  services.csproj  start-receiver.ps1  status-receiver.ps1  stop-receiver.ps1  uninstall-startup.ps1
receiver/: Cargo.toml
receiver/src/: main.rs
receiver/src/capture/: mod.rs
receiver/src/encoder/: mod.rs
receiver/src/input/: mod.rs
receiver/src/network/: mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/api/: mod.rs
server/src/auth/: mod.rs
server/src/database/: mod.rs
